--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sahil Kumar – Linux Enthusiast & Software Developer</title>
+    <style>
+      /* Background overlay lines image loaded from public root; CRA replaces %PUBLIC_URL% at build */
+      body::after {
+        content: "";
+        position: fixed;
+        inset: 0;
+        background-image: url("%PUBLIC_URL%/lines.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        opacity: 0.08;
+        mix-blend-mode: soft-light;
+        pointer-events: none;
+        z-index: -1;
+      }
+    </style>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
