--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sahil Kumar – Linux Enthusiast & Software Developer</title>
     <style>
-      /* Background overlay lines image loaded from public root; CRA replaces %PUBLIC_URL% at build */
+      /* Background overlay lines image - CRA replaces %PUBLIC_URL% with correct path */
       body::after {
         content: "";
         position: fixed;
